fix spacing

--- a/public/custom.css
+++ b/public/custom.css
@@ -48,7 +48,7 @@
 }
 
 .site-subtitle {
-  margin: 1rem 0;
+  margin: 0rem 0;
   font-size: 2em;
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
